feat: Update project name and setup Babel
Updates the project name in `package.json` and `metadata.json` to reflect the copied application.
Introduces Babel standalone to the `index.html` for transpilation of JSX and ES Modules, allowing for direct script execution.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hostel-biometric-entry-system",
+  "name": "copy-of-hostel-biometric-entry-system-(scanner-tak-wala)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
